# icd-tokenize

./: .gitignore  .pre-commit-config.yaml  README.md  analyze.py  collect.py  dataset.py  environment.yml  icd.py  main.py  pyproject.toml  requirements.txt  states.csv  test.py  tokenizer.py  train.ipynb  validate.py  validator.py  中文字典_1100712_提供張老師_自定義字典.xlsx
data/: 1110217_斷字比對(11101).xlsx  1110316_斷字比對(11102).xlsx  1110420_斷字比對(11103).xlsx  1110523_斷字比對(11104).xlsx  1110623_斷字比對(11105).xlsx  1110727_斷字比對(11106).xlsx  1110829_斷字比對(11107).xlsx  1110922_斷字比對(11108).xlsx  1111025_斷字比對(11109).xlsx  1111121_斷字比對(11110).xlsx  1120109_斷字比對(11111).xlsx  1120206_斷字比對(11112).xlsx  1120215_斷字比對(11201).xlsx  1120324_斷字比對(11202).xlsx  1120529_斷字比對(11203).xlsx  1120529_斷字比對(11204).xlsx  1120627_斷字比對(11205).xlsx  1120728_斷字比對(11206).xlsx  斷字比對(00000).xlsx
icd/: exclude-icd.csv  icd.csv  icd.py  non-verified-icd.csv  original-icd.csv  self-defined-icd.csv  synonyms.txt  中文字典_1100712_提供張老師_自定義字典.xlsx
icd_tokenize/: __init__.py  data.py  dataset.py  icd.py  main.py  record.py  stats.py  status.py  synonym.py  tokenizer.py  validator.py
icd_tokenize/data/: covid.csv  exclude-icd.csv  icd.csv  non-verified-icd.csv  original-icd.csv  states.csv  synonym.csv  synonyms.txt
icd_tokenize/icd/: __init__.py  icd.py
icd_tokenize/icd/data/: self-defined-icd.csv
icd_tokenize/tokenizer/: tokenizer.py
icd_tokenize/validator/: validator.py
notebooks/: eda.ipynb  train.ipynb
