[tool.poetry]
name = "icd-tokenize"
version = "0.1.0"
description = ""
authors = ["Eddie Lin <eddielin0926@gmail.com>"]
readme = "README.md"
packages = [{ include = "icd_tokenize" }]

[tool.poetry.scripts]
start = "icd_tokenize.main:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
openpyxl = "3.1.1"
pandas = "^2.0.1"
pygtrie = "^2.5.0"
rich = "^13.3.5"
ipykernel = "^6.23.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
transformers = "^4.34.0"
torch = "^2.1.0"
cuda-python = "12.1.0"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.18.1"
triton = "2.1.0"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-nvtx-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-nvjitlink-cu12 = "^12.2.140"
tensorboard = "^2.14.1"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"
accelerate = "^0.23.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.287"
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
