[tool.poetry]
name = "icd-tokenize"
version = "0.1.0"
description = ""
authors = ["Eddie Lin <eddielin0926@gmail.com>"]
readme = "README.md"
packages = [{ include = "icd_tokenize" }]

[tool.poetry.scripts]
start = "icd_tokenize.main:main"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "^1.24.3"
openpyxl = "3.1.1"
pandas = "^2.0.1"
pygtrie = "^2.5.0"
rich = "^13.3.5"
xlsxwriter = "^3.1.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.287"
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
